# ngram

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.es.md  LICENSE.md  README.es.md  README.md  TODO.md  input.css  make_release.sh  tailwind.config.js
assets/: main.css  tailwind.css
fluent/: en-US.ftl  es-MX.ftl
src/: main.rs
src/nonogram/: component.rs  definitions.rs  editor.rs  evolutive.rs  genetic.rs  implementations.rs  macros.rs  puzzles.rs
